fix slack webhook
