# src/controllers/contact/contact.presenter.ts
@@ -1,4 +1,17 @@
 import { ApiProperty } from '@nestjs/swagger';
+import { IsNotEmpty, IsOptional, IsString } from 'class-validator';
+
+export class ContactRequestBody {
+  @ApiProperty()
+  @IsString()
+  @IsOptional()
+  email?: string;
+
+  @ApiProperty()
+  @IsString()
+  @IsNotEmpty()
+  content: string;
+}
 
 export class ContactPresenter {
   @ApiProperty()
