# src/controllers/contact/index.ts
@@ -1,3 +1,2 @@
 export * from './contact.controller';
 export * from './contact.presenter';
-export * from './contact.dto';
